# FeatureAI-X

./: .gitignore  LICENSE  README.md  data_set1.csv  data_set2.csv  data_set3.csv  feature_quality.py  feature_quality_table.csv  pyproject.toml  requirements.txt
Databricks/: feature_validation_framework.py
automation/: Example Spark Connect usage.ipynb  build-spark.sh  docker-compose.yml  spark-connect-requirements.txt  spark-defaults.conf
automation/spark-conf/: spark-defaults.conf
data/: insurance_claims_report.csv
design/: QA.docx  ideas-1.txt
feature_validation_framework/: app.py  codesnippetgenerator.py  driftdetector.py  feature_quality_table.csv  feature_validation_framework.py  featuresetvalidator.py  generativemodel.py  knowledgebaseinterface.py  ragvalidation.py  requirements.txt  validationrulegenerator.py  vectordatabase.py
feature_validation_framework/metrics/: feature_quality_metrics_insurance_claims_report_2024-09-20.csv  feature_quality_metrics_insurance_claims_report_2024-10-13.csv  feature_quality_metrics_insurance_claims_report_part_2_2024-10-13.csv  feature_quality_metrics_insurance_claims_report_part_3_2024-10-13.csv  feature_quality_table_insurance_claims_report_2024-09-20.csv  feature_quality_table_insurance_claims_report_2024-10-13.csv  (+2 more)
results/: code_snippets_set1.py  code_snippets_set2.py  code_snippets_set3.py  generated_rules_set1.txt  generated_rules_set2.txt  generated_rules_set3.txt  synthetic_data_set1.csv  synthetic_data_set2.csv  synthetic_data_set3.csv  validated_metrics_set1.txt  validated_metrics_set3.txt
(+70 files in other folders)
